# cairn

./: CLAUDE.md  Cargo.toml
crates/cairn-bip39/: Cargo.toml
crates/cairn-bip39/src/: lib.rs  tui.rs
crates/cairn-cas/: Cargo.toml
crates/cairn-cas/src/: chunker.rs  lib.rs  manifest.rs  secret.rs  transform.rs
crates/cairn-catalog/: Cargo.toml
crates/cairn-catalog/src/: lib.rs  tables.rs
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: commands.rs  main.rs
crates/cairn-cli/tests/: cli_smoke.rs
crates/cairn-engine/: Cargo.toml
crates/cairn-engine/src/: backup.rs  engine.rs  lib.rs  restore.rs  retention.rs  sync.rs
crates/cairn-log/: Cargo.toml
crates/cairn-log/src/: lib.rs  machine_log.rs  projection.rs  segment.rs
crates/cairn-remote/: Cargo.toml
crates/cairn-remote/src/: lib.rs
crates/cairn-scan/: Cargo.toml
crates/cairn-scan/src/: lib.rs  platform.rs
crates/cairn-types/: Cargo.toml
crates/cairn-types/src/: clock.rs  config.rs  ids.rs  lib.rs  log.rs  manifest.rs  path.rs  projection.rs
docs/: plan.md
tests/: Cargo.toml
tests/integration/: backup_restore.rs  dedup.rs  encryption.rs  engine.rs  full_cycle.rs  incremental.rs  local_pipeline.rs  mnemonic.rs  r2_live.rs  sync.rs
tests/safety/: accidental_deletion.rs  convergence.rs  crash_resume.rs  never_deletes_user_files.rs  tamper_detection.rs
tests/src/: lib.rs
