[package]
name = "cairn-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cairn-bip39 = { path = "../crates/cairn-bip39", default-features = false }
cairn-types = { workspace = true }
cairn-cas = { workspace = true }
cairn-log = { workspace = true }
cairn-catalog = { workspace = true }
cairn-scan = { workspace = true }
cairn-remote = { workspace = true }
cairn-engine = { workspace = true }
aws-credential-types = "1"
aws-sigv4 = { version = "1", features = ["http1"] }
base64 = "0.22"
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
http = "1"
object_store = { workspace = true }
postcard = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
name = "cairn_integration_tests"
path = "src/lib.rs"

[[test]]
name = "local_pipeline"
path = "integration/local_pipeline.rs"

[[test]]
name = "backup_restore"
path = "integration/backup_restore.rs"

[[test]]
name = "sync"
path = "integration/sync.rs"

[[test]]
name = "encryption"
path = "integration/encryption.rs"

[[test]]
name = "engine"
path = "integration/engine.rs"

[[test]]
name = "mnemonic"
path = "integration/mnemonic.rs"

[[test]]
name = "full_cycle"
path = "integration/full_cycle.rs"

[[test]]
name = "incremental"
path = "integration/incremental.rs"

[[test]]
name = "dedup"
path = "integration/dedup.rs"

[[test]]
name = "accidental_deletion"
path = "safety/accidental_deletion.rs"

[[test]]
name = "never_deletes_user_files"
path = "safety/never_deletes_user_files.rs"

[[test]]
name = "convergence"
path = "safety/convergence.rs"

[[test]]
name = "crash_resume"
path = "safety/crash_resume.rs"

[[test]]
name = "tamper_detection"
path = "safety/tamper_detection.rs"

[[test]]
name = "r2_live"
path = "integration/r2_live.rs"
