[package]
name = "cairn-catalog"
version.workspace = true
edition.workspace = true

[dependencies]
cairn-types = { workspace = true }
cairn-log = { workspace = true }
postcard = { workspace = true }
redb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
tempfile = { workspace = true }
