[package]
name = "cairn-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-engine = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
