[package]
name = "cairn-engine"
version.workspace = true
edition.workspace = true

[dependencies]
cairn-types = { workspace = true }
cairn-cas = { workspace = true }
cairn-log = { workspace = true }
cairn-catalog = { workspace = true }
cairn-scan = { workspace = true }
cairn-remote = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
object_store = { workspace = true }
postcard = { workspace = true }
tempfile = { workspace = true }
