[package]
name = "cairn-remote"
version.workspace = true
edition.workspace = true

[dependencies]
cairn-types = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
object_store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
