[package]
name = "cairn-scan"
version.workspace = true
edition.workspace = true

[dependencies]
cairn-types = { workspace = true }
blake3 = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
