[package]
name = "cairn-types"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
